<resources>
    <string name="app_name">Папа Джон’с. Промокоды</string>
    <string name="server_error_message">При загрузке кодов произошла ошибка.\nПроверьте подключение к интернету.</string>
    <string name="update">Обновить</string>
    <string name="error_message_mapping">Что-то пошло не так, попробуйте позже!</string>

    <string-array name="cities_array">
        <item>Любой город</item>
        <item>Минск</item>
        <item>Витебск</item>
        <item>Могилев</item>
        <item>Гомель</item>
        <item>Бобруйск</item>
        <item>Гродно</item>
        <item>Мозырь</item>
    </string-array>

    <string name="radio_item_all">Все</string>
    <string name="radio_item_23">23см</string>
    <string name="radio_item_30">30см</string>
    <string name="radio_item_35">35см</string>
    <string name="radio_item_40">40см</string>

    <string name="filter_23">23</string>
    <string name="filter_30">30</string>
    <string name="filter_35">35</string>
    <string name="filter_40">40</string>

    <string name="seek_to">Заказ на %1d рублей</string>

    <string name="bottom_filter">Фильтры</string>

    <string name="message_copy_done">Код %1s скопирован!</string>

    <string name="tutorial_message_1">Нажмите на карточку,</string>
    <string name="tutorial_message_2">чтобы скопировать код.</string>
    <string name="tutorial_message_3">Нажмите на</string>
    <string name="tutorial_message_4">"и вставьте код в поле "</string>
    <string name="tutorial_message_5">на сайте.</string>
    <string name="tutorial_button_text">Далее</string>
</resources>
