<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/codeBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:visibility="visible"
    app:behavior_peekHeight="@dimen/margin_50"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.appcompat.widget.AppCompatImageView
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/imageFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/filter_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:focusable="false"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/bottom_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/imageFilter"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/codeCitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilter" />

    <TextView
        android:id="@+id/seekFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/seek_from"
        app:layout_constraintStart_toStartOf="@+id/codeCitySpinner"
        app:layout_constraintTop_toBottomOf="@+id/codeCitySpinner" />

    <com.appyvet.materialrangebar.RangeBar
        android:id="@+id/codeSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"
        app:layout_constraintBottom_toBottomOf="@+id/seekFrom"
        app:layout_constraintEnd_toStartOf="@+id/seekTo"
        app:layout_constraintStart_toEndOf="@+id/seekFrom"
        app:layout_constraintTop_toTopOf="@+id/seekFrom" />

    <TextView
        android:id="@+id/seekTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_to"
        app:layout_constraintBottom_toBottomOf="@+id/codeSeekBar"
        app:layout_constraintEnd_toEndOf="@+id/codeCitySpinner"
        app:layout_constraintTop_toTopOf="@+id/codeSeekBar" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_24"
        android:checkedButton="@id/allSizes"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeSeekBar">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/allSizes"
            style="@style/ToggleButton"
            android:text="@string/radio_item_all" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/size23"
            style="@style/ToggleButton"
            android:text="@string/radio_item_23" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/size30"
            style="@style/ToggleButton"
            android:text="@string/radio_item_30" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/size35"
            style="@style/ToggleButton"
            android:text="@string/radio_item_35" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/size40"
            style="@style/ToggleButton"
            android:text="@string/radio_item_40" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>